Support null values (#5342)
Signed-off-by: Hai Yan <oeyh@amazon.com>